--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+ultralytics
 git+https://github.com/openai/CLIP.git
 matplotlib==3.8.2
 numpy==1.26.3
@@ -8,5 +9,5 @@ streamlit==1.30.0
 torch==2.1.2
 torchvision==0.16.2
 tqdm==4.66.1
-ultralytics
 opencv-python-headless<=4.6.0.66
+libgl1
