--- a/requirements.txt
+++ b/requirements.txt
@@ -9,5 +9,6 @@ torch==2.1.2
 torchvision==0.16.2
 tqdm==4.66.1
 opencv-python-headless<=4.6.0.66
-ultralytics
-libgl1-mesa-dev
+ultralytics>=8.0.232
+opencv-python>=4.1.1
+requests>=2.23.0
