--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,4 @@ streamlit==1.30.0
 torch==2.1.2
 torchvision==0.16.2
 tqdm==4.66.1
-opencv-python-headless<4.3
-fastai
-ultralytics
+opencv-python-headless
