--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ pandas==2.1.4
 Pillow==10.2.0
 scikit_learn==1.3.2
 streamlit==1.30.0
+streamlit-extras==0.2.7
 torch==2.1.2
 torchvision==0.16.2
 tqdm==4.66.1
